[package]
name = "csv-validator"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valico = "3.2.0"
clap = "2.33.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
csv = "1.1.3"
