[package]
name = "jsv"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
clap = "2.33.1"
serde_json = "1.0.53"
jsonschema-valid = "0.4.0"
